Add hinos de set 10

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <p><a href="https://cachoeirinha.ipb.org.br/">Igreja Presbiteriana de Cachoeirinha</a></p>
     <p><a href="2023/set-03/a-transformacao-pela-graca">A Transformação pela Graça (03 de Setembro de 2023)</a></p>
-    <p><a href="2023/set-10/os-filhos-e-herdeiros-em-cristo">Os Filhos e Herdeiros em Cristo (10 de Setembro de 2023)</a></p>
+    <p><a href="2023/set-10/os-filhos-e-herdeiros-em-cristo">Os Filhos e Herdeiros em Cristo (10 de Setembro de
+            2023)</a></p>
 </body>
 
 </html>
